--- a/style.css
+++ b/style.css
@@ -2,20 +2,137 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+}
+
+body {
+  background: linear-gradient(-45deg, #0f2027, #203a43, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 30s ease infinite;
+  height: 100vh;
 }
 
 .container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .header {
-  margin: 20px;
+  margin: 40px;
+}
+
+.content {
+  margin-top: 125px;
 }
 
 .header > input {
   width: 250px;
-  padding: 12px;
+  padding: 12px 18px;
+  border-radius: 30px;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: 1px solid rgb(255, 255, 255);
+  transition: background-color 0.3s ease-in-out;
+  color: black;
+}
+
+.header > input:focus {
+  outline: none;
+  background-color: white;
+}
+
+.header > input::placeholder {
+  color: rgb(255, 255, 255);
+}
+
+.weather {
+  padding: 30px;
+  border-radius: 30px;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   border-radius: 20px;
-  border: 2px solid black;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1),
+    inset 0 1px 0 rgba(255, 255, 255, 0.5),
+    inset 0 -1px 0 rgba(255, 255, 255, 0.1),
+    inset 0 0 0px 0px rgba(255, 255, 255, 0);
+  position: relative;
+  overflow: hidden;
+  scale: 1;
+  transition: scale 0.2s ease-in-out;
+}
+
+.weather-reveal {
+  scale: 0.9;
+}
+
+.weather-wrapper,
+.info-wrapper {
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.transition {
+  opacity: 0;
+}
+
+.condition {
+  font-size: 1.5rem;
+  font-weight: 100;
+}
+
+.location {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 1;
+}
+
+.info-wrapper {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+
+.temp-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.temp {
+  font-size: 10rem;
+  font-weight: 600;
+  vertical-align: top;
+  line-height: 0.8;
+}
+
+.celsius {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 1.1;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 1rem;
+  font-weight: 100;
+  border-left: 1px solid white;
+  padding-left: 20px;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
