--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ body {
 
 .header {
   margin: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.error {
+  position: absolute;
+  transform: translateY(3.1rem);
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  font-weight: 100;
 }
 
 .content {
@@ -78,6 +89,10 @@ body {
 
 .transition {
   opacity: 0;
+}
+
+.transition-appear {
+  opacity: 1;
 }
 
 .condition {
